3.11
-----
* tweaked action points for fm and psea


3.10
-----
* fixed locations services
* fixed fm services
* fixed templates


3.9
-----
* fm endpoint added monitoring activity id and number


3.8
-----
* fund reservation added country name


3.7.1
-----
* fixed headers


3.7
----
* migrated to Django 3.2
* removed obsolete spotcheck model


3.6.1
-----
* fix fm on track


3.6
----
* added location site endpoint
* tweaked fm endpoints
* added higher risk rating for partner endpoint


3.5.1 Hotfix
-----
* prp hotfix


3.5
----
* migrate jsonfield
* fixed fm service
* tweaked attachement etools serializer


3.4
----
* migrated to Django 3.1
* added filterform for export view
* added partner type for fam endpoints


3.3
----
* gateway-type endpoint
* tweaked admin
* migrated do Django 3.0
* removed dbtemplates
* added location gateway endpoint
* fixed xls illegal char issue
* fam added status
* disable export by default


3.2
----
* adjust email settings
* added filters


3.1
----
* fix jwt integration
* added fam exports


3.0
----
* fix ETL
* disable notifications
* update requirements celery 5, drf 3.12
* extract unicef-security


2.14
----
* add geonameid to locations endpoint
* add pd_url to pd indicator endpoint
* set budget values in process_country and not through mapping
* fix InterventionBudget loader queryset

2.13
----
* add new office endpoint
* update etools source to match latest etools
* add ordering to model Meta for pagination where needed

2.12
----
* add disaggregation field to PRP data report

2.11
----
* fixes #18276 - Add `Achievement in reporting period` field to the prp/datareport endpoint


2.10.3
------
* fixes Intervention.frs


2.10.2
------
* fixes DataReportLoader


2.10.1
------
* use poetry instead of pipenv
* BACKWARD INCOMPATIBLE: all `prp` endpoints to the source database moved to `sources/prp`
* BACKWARD INCOMPATIBLE: all `etools` endpoints to the source database moved to `sources/etools`
* Offline requests and File Exports.