@@ -1,0 +1,28 @@
+# Generated by Django 3.1.8 on 2021-06-11 14:06
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0146_auto_20210611_0437'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='partner',
+            name='psea_assessment_date',
+            field=models.DateTimeField(blank=True, null=True),
+        ),
+        migrations.AlterField(
+            model_name='actionpoint',
+            name='category_module',
+            field=models.CharField(blank=True, choices=[('apd', 'Action Points'), ('t2f', 'Trip Management'), ('tpm', 'Third Party Monitoring'), ('audit', 'Financial Assurance'), ('psea', 'PSEA Assessment'), ('fm', 'Field Monitoring')], max_length=64, null=True),
+        ),
+        migrations.AlterField(
+            model_name='actionpoint',
+            name='related_module_class',
+            field=models.CharField(blank=True, choices=[('AuditSpotcheck', 'AuditSpotcheck'), ('AuditMicroassessment', 'AuditMicroassessment'), ('AuditSpecialaudit', 'AuditSpecialaudit'), ('AuditAudit', 'AuditAudit'), ('TpmTpmactivity', 'TpmTpmactivity'), ('T2FTravelactivity', 'T2FTravelactivity'), ('PseaAssessment', 'PseaAssessment'), ('FieldMonitoringPlanningMonitoringactivity', 'FieldMonitoringPlanningMonitoringactivity')], db_index=True, max_length=64, null=True),
+        ),
+    ]
