@@ -1,6 +1,7 @@
 3.11
 -----
 * tweaked action points for fm and psea
+* amended partner
 
 
 3.10
